@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: parse.c,v 1.88.2.3 2015/07/09 01:40:44 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: parse.c,v 1.88.2.4 2015/08/01 05:09:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - parse.c */
@@ -171,9 +171,9 @@ const_express(struct value *valptr)
     return (valptr);
 }
 
-/* Used by plot2d/plot3d/fit:
- * Parse an expression that may return a string or may return a constant or may
- * be a dummy function using dummy variables x, y, ...
+/* Used by plot2d/plot3d/stats/fit:
+ * Parse an expression that may return a filename string, a datablock name,
+ * a constant, or a dummy function using dummy variables x, y, ...
  * If any dummy variables are present, set (*atptr) to point to an action table
  * corresponding to the parsed expression, and return NULL.
  * Otherwise evaluate the expression and return a string if there is one.
@@ -222,8 +222,15 @@ string_or_express(struct at_type **atptr)
 	struct value val;
 
 	evaluate_at(at, &val);
-	if (!undefined && val.type == STRING)
-	    str = val.v.string_val;
+	if (!undefined && val.type == STRING) {
+	    /* prevent empty string variable from treated as special file '' or "" */
+	    if (*val.v.string_val == '\0') {
+		free(val.v.string_val);
+		str = strdup(" ");
+	    } else {
+		str = val.v.string_val;
+	    }
+	}
     }
 
     /* prepare return */
